--- a/apps/metamask-connect/src/styles.scss
+++ b/apps/metamask-connect/src/styles.scss
@@ -1,1 +1,41 @@
 /* You can add global styles to this file, and also import other style files */
+/* You can add global styles to this file, and also import other style files */
+:root {
+    --primary-color: #000;
+    --secondary-color: #fff;
+    --gray-color: #e4e4e4;
+    --dark-gray-color: #a0a0a0;
+    --loading-background-color: rgba(0, 0, 0, 0.5);
+
+    --error-color: rgb(143, 0, 0);
+    --error-background-color: rgba(143, 0, 0, 0.15);
+
+    --success-color: rgb(0, 143, 0);
+    --success-background-color: rgba(0, 143, 0, 0.15);
+
+    --info-color: rgb(0, 0, 143);
+    --info-background-color: rgba(0, 0, 143, 0.15);
+
+    --warning-color: rgb(143, 143, 0);
+    --warning-background-color: rgba(143, 143, 0, 0.15);
+}
+
+* {
+    font-family: monospace;
+}
+
+html,
+body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+}
+
+// MARKDOWN OVERWRITES
+blockquote {
+    border-left: 3px solid rgba(0, 0, 0, 0.21);
+    padding-left: 12px;
+    color: rgba(0, 0, 0, 0.54);
+}
+//
+
